src/objects/Honorarium_Information__c.object
<CustomObject>
    <fields>
        <fullName>NOFA_Group__c</fullName>
        <label>NOFO Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Honorarium Informations</relationshipLabel>
        <relationshipName>Honorarium_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Expertise Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Rater Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Review Quality Control</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Honorarium Information</label>
    <nameField>
        <displayFormat>Honorarium Info-{0000}</displayFormat>
        <label>Honorarium Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Honorarium Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>